Bug 1239463 - Do not assert when notifying an inactive document about changed content from the plugin crash notification. r=bz